# what-ris

./: .gitignore  Dockerfile  README.md  brief.md  pyproject.toml
.github/workflows/: pipeline.yml
ris/: __init__.py  api.py
ris/schemas/: iris.py
ris/services/: iris.py
tests/: conftest.py  test_maths.py  test_predict.py
